@@ -1,3 +1,10 @@
+2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* build-mingw32ce.sh: Display bootstrapgcc option on `usage`.
+	Move option reporting below option processing.  Exit immediatelly
+	if an invalid component is specified.  Actually allow specifying a
+	list of components.
+
 2007-12-24  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* build-mingw32ce.sh (usage): Make it run with sh.
